--- a/index.html
+++ b/index.html
@@ -5,6 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>flex-direction</h1>
+
+    <section class="button-list">
+      <button
+        class="btn"
+        data-flex-direction="ROW"
+        data-current-item="true"
+      ></button>
+      <button
+        class="btn"
+        data-flex-direction="ROW-REVERSE"
+        data-current-item="false"
+      ></button>
+      <button
+        class="btn"
+        data-flex-direction="COLUMN"
+        data-current-item="false"
+      ></button>
+      <button
+        class="btn"
+        data-flex-direction="COLUMN-REVERSE"
+        data-current-item="false"
+      ></button>
+    </section>
+
+    <section id="item-list">
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">4</div>
+    </section>
+
+    <script src="./assets/js/index.js"></script>
+  </body>
 </html>
